package Ejercicio1;

public interface Elemento {
    int getCodigo();
    double getPrecio();


}
